# list-lang

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-pyright-fails.yml  run-tests.yml
src/: lang_types.py  list_dialect.py  lowerings.py  main.py  scoped_dict_shadow.py  source.py  transforms.py
tests/: booleans.lsl  expressions.lsl  integration.lsl  lists.lsl  lit.cfg.py  methods.lsl  methods_print.lsl  scalars.lsl  shadowing.lsl  test_errors.py
tests/filecheck/: bug_xor.lsl  expressions.lsl  lists.lsl  lit.cfg.py  methods.lsl  optimize_len.lsl  optimize_map.lsl
