[project]
name = "list-lang"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
authors = [{ name = "Théo Degioanni" }]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [ "xdsl @ git+https://github.com/xdslproject/xdsl" ]
dynamic = ["version"]

[dependency-groups]
dev = [
    "lit",
    "pytest",
    "filecheck",
]

[tool.setuptools]
platforms = ["Linux", "Mac OS-X", "Unix"]
zip-safe = false

[build-system]
requires = ["setuptools>=42", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.pyright]
enableTypeIgnoreComments = false
typeCheckingMode = "strict"
"include" = ["src"]
"exclude" = []
"ignore" = []

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "W", "I", "UP", "PT", "TID251"]
ignore = ["PT015"]
line-length = 120
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
# When updating this list, please update `.pre-commit-config.yaml`
exclude = """
/(__pycache__|.asv|venv|build|tests/filecheck)/
|versioneer.py$
"""

[tool.pytest.ini_options]
python_files = ["tests/*test_*.py", "docs/*test_*.py"]
python_classes = "Test_*"
python_functions = "test_*"
addopts = ["--durations=20", "--maxfail=5"]
